gen/nl/lxtreme/libtdl/grammar/adv/AdvTdlParser.java
// $ANTLR ANTLRVersion> AdvTdlParser.java generatedTimestamp>

/*
 * LibTDL - Library for parsing/handling the "Trigger Definition Language".
 *
 * (C) Copyright 2012-2013 - J.W. Janssen, <j.w.janssen@lxtreme.nl>
 *
 * Licensed under Apache Software License version 2.0, see <http://www.apache.org/licenses/LICENSE-2.0.html>.
 */
package nl.lxtreme.libtdl.grammar.adv;

import java.util.*;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.*;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AdvTdlParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, COMMENT=2, NL=3, WS=4, ASSIGN=5, EQUALS_TO=6, MASK=7, VALUE=8, 
		RISING=9, FALLING=10, BOTH=11, NEITHER=12, STAGE=13, CAPTURE=14, NOP=15, 
		ANY=16, WHEN=17, OCCURS=18, START=19, STOP=20, CLEAR=21, GOTO=22, NEXT=23, 
		ELSE=24, ON=25, COMMA=26, COLON=27, NOT=28, XOR=29, AND=30, OR=31, LPAREN=32, 
		RPAREN=33, BIN_LITERAL=34, HEX_LITERAL=35, OCT_LITERAL=36, DEC_LITERAL=37, 
		TIME_UNIT=38, TERM_NAME=39, TIMER_NAME=40, RANGE_NAME=41, EDGE_NAME=42;
	public static final String[] tokenNames = {
		"<INVALID>", "'..'", "COMMENT", "NL", "WS", "':='", "'='", "'mask'", "'value'", 
		"'rising'", "'falling'", "'both'", "'neither'", "'stage'", "'capture'", 
		"'nop'", "'any'", "'when'", "'occurs'", "'start'", "'stop'", "'clear'", 
		"'goto'", "'next'", "'else'", "'on'", "','", "':'", "'~'", "'^'", "'&'", 
		"'|'", "'('", "')'", "BIN_LITERAL", "HEX_LITERAL", "OCT_LITERAL", "DEC_LITERAL", 
		"TIME_UNIT", "TERM_NAME", "TIMER_NAME", "RANGE_NAME", "EDGE_NAME"
	};
	public static final int
		RULE_prog = 0, RULE_decl = 1, RULE_termDecl = 2, RULE_timerDecl = 3, RULE_rangeDecl = 4, 
		RULE_edgeTermDecl = 5, RULE_edgeDecl = 6, RULE_stageDef = 7, RULE_whenAction = 8, 
		RULE_elseAction = 9, RULE_termExpr = 10, RULE_expr = 11, RULE_number = 12, 
		RULE_decNumber = 13;
	public static final String[] ruleNames = {
		"prog", "decl", "termDecl", "timerDecl", "rangeDecl", "edgeTermDecl", 
		"edgeDecl", "stageDef", "whenAction", "elseAction", "termExpr", "expr", 
		"number", "decNumber"
	};

	@Override
	public String getGrammarFileName() { return "AdvTdl.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public AdvTdlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<StageDefContext> stageDef() {
			return getRuleContexts(StageDefContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public StageDefContext stageDef(int i) {
			return getRuleContext(StageDefContext.class,i);
		}
		public TerminalNode EOF() { return getToken(AdvTdlParser.EOF, 0); }
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AdvTdlVisitor ) return ((AdvTdlVisitor<? extends T>)visitor).visitProg(this);
			else return null;
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STAGE) | (1L << TERM_NAME) | (1L << TIMER_NAME) | (1L << RANGE_NAME) | (1L << EDGE_NAME))) != 0)) {
				{
				setState(30);
				switch (_input.LA(1)) {
				case TERM_NAME:
				case TIMER_NAME:
				case RANGE_NAME:
				case EDGE_NAME:
					{
					setState(28); decl();
					}
					break;
				case STAGE:
					{
					setState(29); stageDef();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(34);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(35); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public EdgeDeclContext edgeDecl() {
			return getRuleContext(EdgeDeclContext.class,0);
		}
		public RangeDeclContext rangeDecl() {
			return getRuleContext(RangeDeclContext.class,0);
		}
		public TermDeclContext termDecl() {
			return getRuleContext(TermDeclContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(AdvTdlParser.WS); }
		public TimerDeclContext timerDecl() {
			return getRuleContext(TimerDeclContext.class,0);
		}
		public TerminalNode WS(int i) {
			return getToken(AdvTdlParser.WS, i);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AdvTdlVisitor ) return ((AdvTdlVisitor<? extends T>)visitor).visitDecl(this);
			else return null;
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			switch (_input.LA(1)) {
			case TERM_NAME:
				{
				setState(37); termDecl();
				}
				break;
			case TIMER_NAME:
				{
				setState(38); timerDecl();
				}
				break;
			case RANGE_NAME:
				{
				setState(39); rangeDecl();
				}
				break;
			case EDGE_NAME:
				{
				setState(40); edgeDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(43); match(WS);
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermDeclContext extends ParserRuleContext {
		public Token name;
		public NumberContext mask;
		public NumberContext value;
		public TerminalNode TERM_NAME() { return getToken(AdvTdlParser.TERM_NAME, 0); }
		public TerminalNode XOR() { return getToken(AdvTdlParser.XOR, 0); }
		public TerminalNode MASK() { return getToken(AdvTdlParser.MASK, 0); }
		public TerminalNode VALUE() { return getToken(AdvTdlParser.VALUE, 0); }
		public TerminalNode COMMA() { return getToken(AdvTdlParser.COMMA, 0); }
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public TerminalNode EQUALS_TO() { return getToken(AdvTdlParser.EQUALS_TO, 0); }
		public TerminalNode ASSIGN() { return getToken(AdvTdlParser.ASSIGN, 0); }
		public TermDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AdvTdlVisitor ) return ((AdvTdlVisitor<? extends T>)visitor).visitTermDecl(this);
			else return null;
		}
	}

	public final TermDeclContext termDecl() throws RecognitionException {
		TermDeclContext _localctx = new TermDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_termDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); ((TermDeclContext)_localctx).name = match(TERM_NAME);
			setState(50); match(ASSIGN);
			setState(74);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				{
				setState(51); match(MASK);
				setState(52); match(EQUALS_TO);
				setState(53); ((TermDeclContext)_localctx).mask = number();
				}
				setState(55); match(COMMA);
				{
				setState(56); match(VALUE);
				setState(57); match(EQUALS_TO);
				setState(58); ((TermDeclContext)_localctx).value = number();
				}
				}
				break;

			case 2:
				{
				{
				setState(60); match(MASK);
				setState(61); match(EQUALS_TO);
				setState(62); number();
				}
				 notifyErrorListeners("missing term value"); 
				}
				break;

			case 3:
				{
				{
				setState(66); ((TermDeclContext)_localctx).mask = number();
				setState(67); match(XOR);
				setState(68); ((TermDeclContext)_localctx).value = number();
				}
				}
				break;

			case 4:
				{
				{
				setState(70); number();
				}
				 notifyErrorListeners("missing term value"); 
				}
				break;

			case 5:
				{
				 notifyErrorListeners("missing mask and value"); 
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimerDeclContext extends ParserRuleContext {
		public Token name;
		public NumberContext value;
		public Token unit;
		public TerminalNode TIMER_NAME() { return getToken(AdvTdlParser.TIMER_NAME, 0); }
		public TerminalNode TIME_UNIT() { return getToken(AdvTdlParser.TIME_UNIT, 0); }
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(AdvTdlParser.ASSIGN, 0); }
		public TimerDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timerDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AdvTdlVisitor ) return ((AdvTdlVisitor<? extends T>)visitor).visitTimerDecl(this);
			else return null;
		}
	}

	public final TimerDeclContext timerDecl() throws RecognitionException {
		TimerDeclContext _localctx = new TimerDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_timerDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76); ((TimerDeclContext)_localctx).name = match(TIMER_NAME);
			setState(77); match(ASSIGN);
			setState(85);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(78); ((TimerDeclContext)_localctx).value = number();
				setState(79); ((TimerDeclContext)_localctx).unit = match(TIME_UNIT);
				}
				break;

			case 2:
				{
				setState(81); number();
				 notifyErrorListeners("missing time unit"); 
				}
				break;

			case 3:
				{
				 notifyErrorListeners("missing time value and unit"); 
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RangeDeclContext extends ParserRuleContext {
		public Token name;
		public NumberContext lowerBound;
		public NumberContext upperBound;
		public TerminalNode RANGE_NAME() { return getToken(AdvTdlParser.RANGE_NAME, 0); }
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(AdvTdlParser.ASSIGN, 0); }
		public RangeDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rangeDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AdvTdlVisitor ) return ((AdvTdlVisitor<? extends T>)visitor).visitRangeDecl(this);
			else return null;
		}
	}

	public final RangeDeclContext rangeDecl() throws RecognitionException {
		RangeDeclContext _localctx = new RangeDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rangeDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); ((RangeDeclContext)_localctx).name = match(RANGE_NAME);
			setState(88); match(ASSIGN);
			setState(101);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(89); ((RangeDeclContext)_localctx).lowerBound = number();
				setState(90); match(1);
				setState(91); ((RangeDeclContext)_localctx).upperBound = number();
				}
				break;

			case 2:
				{
				setState(93); number();
				setState(94); match(1);
				 notifyErrorListeners("missing upper bound"); 
				}
				break;

			case 3:
				{
				setState(97); number();
				 notifyErrorListeners("missing upper bound"); 
				}
				break;

			case 4:
				{
				 notifyErrorListeners("invalid range definition, needs lower and upper bound"); 
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EdgeTermDeclContext extends ParserRuleContext {
		public Token name;
		public NumberContext mask;
		public TerminalNode BOTH() { return getToken(AdvTdlParser.BOTH, 0); }
		public TerminalNode NEITHER() { return getToken(AdvTdlParser.NEITHER, 0); }
		public TerminalNode FALLING() { return getToken(AdvTdlParser.FALLING, 0); }
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public TerminalNode EQUALS_TO() { return getToken(AdvTdlParser.EQUALS_TO, 0); }
		public TerminalNode RISING() { return getToken(AdvTdlParser.RISING, 0); }
		public EdgeTermDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edgeTermDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AdvTdlVisitor ) return ((AdvTdlVisitor<? extends T>)visitor).visitEdgeTermDecl(this);
			else return null;
		}
	}

	public final EdgeTermDeclContext edgeTermDecl() throws RecognitionException {
		EdgeTermDeclContext _localctx = new EdgeTermDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_edgeTermDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			((EdgeTermDeclContext)_localctx).name = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RISING) | (1L << FALLING) | (1L << BOTH) | (1L << NEITHER))) != 0)) ) {
				((EdgeTermDeclContext)_localctx).name = (Token)_errHandler.recoverInline(this);
			}
			consume();
			setState(104); match(EQUALS_TO);
			setState(107);
			switch (_input.LA(1)) {
			case BIN_LITERAL:
			case HEX_LITERAL:
			case OCT_LITERAL:
			case DEC_LITERAL:
				{
				setState(105); ((EdgeTermDeclContext)_localctx).mask = number();
				}
				break;
			case EOF:
			case WS:
			case STAGE:
			case COMMA:
			case TERM_NAME:
			case TIMER_NAME:
			case RANGE_NAME:
			case EDGE_NAME:
				{
				 notifyErrorListeners("missing edge value"); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EdgeDeclContext extends ParserRuleContext {
		public Token name;
		public EdgeTermDeclContext edgeTermDecl;
		public List<EdgeTermDeclContext> terms = new ArrayList<EdgeTermDeclContext>();
		public EdgeTermDeclContext edgeTermDecl() {
			return getRuleContext(EdgeTermDeclContext.class,0);
		}
		public TerminalNode EDGE_NAME() { return getToken(AdvTdlParser.EDGE_NAME, 0); }
		public TerminalNode COMMA() { return getToken(AdvTdlParser.COMMA, 0); }
		public TerminalNode ASSIGN() { return getToken(AdvTdlParser.ASSIGN, 0); }
		public EdgeDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edgeDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AdvTdlVisitor ) return ((AdvTdlVisitor<? extends T>)visitor).visitEdgeDecl(this);
			else return null;
		}
	}

	public final EdgeDeclContext edgeDecl() throws RecognitionException {
		EdgeDeclContext _localctx = new EdgeDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_edgeDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109); ((EdgeDeclContext)_localctx).name = match(EDGE_NAME);
			setState(110); match(ASSIGN);
			setState(120);
			switch (_input.LA(1)) {
			case RISING:
			case FALLING:
			case BOTH:
			case NEITHER:
				{
				{
				setState(111); ((EdgeDeclContext)_localctx).edgeTermDecl = edgeTermDecl();
				((EdgeDeclContext)_localctx).terms.add(((EdgeDeclContext)_localctx).edgeTermDecl);
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(112); match(COMMA);
					setState(113); ((EdgeDeclContext)_localctx).edgeTermDecl = edgeTermDecl();
					((EdgeDeclContext)_localctx).terms.add(((EdgeDeclContext)_localctx).edgeTermDecl);
					}
					}
					setState(118);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			case EOF:
			case WS:
			case STAGE:
			case TERM_NAME:
			case TIMER_NAME:
			case RANGE_NAME:
			case EDGE_NAME:
				{
				 notifyErrorListeners("invalid edge definition, needs at least one edge term declaration"); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StageDefContext extends ParserRuleContext {
		public DecNumberContext n;
		public TermExprContext captureExpr;
		public TermExprContext ifExpr;
		public DecNumberContext occurrence;
		public TermExprContext elseExpr;
		public TerminalNode COLON() { return getToken(AdvTdlParser.COLON, 0); }
		public ElseActionContext elseAction() {
			return getRuleContext(ElseActionContext.class,0);
		}
		public List<TermExprContext> termExpr() {
			return getRuleContexts(TermExprContext.class);
		}
		public List<DecNumberContext> decNumber() {
			return getRuleContexts(DecNumberContext.class);
		}
		public TerminalNode STAGE() { return getToken(AdvTdlParser.STAGE, 0); }
		public TerminalNode WHEN() { return getToken(AdvTdlParser.WHEN, 0); }
		public DecNumberContext decNumber(int i) {
			return getRuleContext(DecNumberContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(AdvTdlParser.ELSE, 0); }
		public TerminalNode OCCURS() { return getToken(AdvTdlParser.OCCURS, 0); }
		public TerminalNode ON() { return getToken(AdvTdlParser.ON, 0); }
		public TerminalNode CAPTURE() { return getToken(AdvTdlParser.CAPTURE, 0); }
		public WhenActionContext whenAction() {
			return getRuleContext(WhenActionContext.class,0);
		}
		public TermExprContext termExpr(int i) {
			return getRuleContext(TermExprContext.class,i);
		}
		public StageDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stageDef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AdvTdlVisitor ) return ((AdvTdlVisitor<? extends T>)visitor).visitStageDef(this);
			else return null;
		}
	}

	public final StageDefContext stageDef() throws RecognitionException {
		StageDefContext _localctx = new StageDefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stageDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(122); match(STAGE);
				setState(123); ((StageDefContext)_localctx).n = decNumber();
				setState(124); match(COLON);
				}
				break;

			case 2:
				{
				setState(126); match(STAGE);
				setState(127); decNumber();
				 notifyErrorListeners("missing colon"); 
				}
				break;

			case 3:
				{
				setState(130); match(STAGE);
				 notifyErrorListeners("missing stage ID"); 
				}
				break;
			}
			setState(139);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(134); match(CAPTURE);
				setState(135); ((StageDefContext)_localctx).captureExpr = termExpr();
				}
				break;

			case 2:
				{
				setState(136); match(CAPTURE);
				 notifyErrorListeners("missing capture expression"); 
				}
				break;

			case 3:
				{
				 notifyErrorListeners("missing capture clause"); 
				}
				break;
			}
			setState(164);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(141); match(WHEN);
				setState(142); ((StageDefContext)_localctx).ifExpr = termExpr();
				setState(145);
				_la = _input.LA(1);
				if (_la==OCCURS) {
					{
					setState(143); match(OCCURS);
					setState(144); ((StageDefContext)_localctx).occurrence = decNumber();
					}
				}

				setState(147); whenAction();
				}
				break;

			case 2:
				{
				setState(149); match(WHEN);
				setState(150); termExpr();
				setState(153);
				_la = _input.LA(1);
				if (_la==OCCURS) {
					{
					setState(151); match(OCCURS);
					setState(152); decNumber();
					}
				}

				 notifyErrorListeners("missing when action"); 
				}
				break;

			case 3:
				{
				setState(157); match(WHEN);
				setState(160);
				_la = _input.LA(1);
				if (_la==OCCURS) {
					{
					setState(158); match(OCCURS);
					setState(159); decNumber();
					}
				}

				 notifyErrorListeners("missing when expression"); 
				}
				break;

			case 4:
				{
				 notifyErrorListeners("missing when clause"); 
				}
				break;
			}
			setState(182);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				{
				setState(166); match(ELSE);
				setState(167); match(ON);
				setState(168); ((StageDefContext)_localctx).elseExpr = termExpr();
				setState(169); elseAction();
				}
				break;

			case 2:
				{
				setState(171); match(ELSE);
				setState(172); match(ON);
				setState(173); termExpr();
				 notifyErrorListeners("missing else action"); 
				}
				break;

			case 3:
				{
				setState(176); match(ELSE);
				setState(177); match(ON);
				 notifyErrorListeners("missing else expression"); 
				}
				break;

			case 4:
				{
				setState(179); match(ELSE);
				 notifyErrorListeners("missing on"); 
				}
				break;

			case 5:
				{
				 notifyErrorListeners("missing else clause"); 
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhenActionContext extends ParserRuleContext {
		public Token action;
		public Token name;
		public TerminalNode CAPTURE() { return getToken(AdvTdlParser.CAPTURE, 0); }
		public TerminalNode START() { return getToken(AdvTdlParser.START, 0); }
		public TerminalNode NEXT() { return getToken(AdvTdlParser.NEXT, 0); }
		public TerminalNode STOP() { return getToken(AdvTdlParser.STOP, 0); }
		public TerminalNode TIMER_NAME() { return getToken(AdvTdlParser.TIMER_NAME, 0); }
		public TerminalNode GOTO() { return getToken(AdvTdlParser.GOTO, 0); }
		public TerminalNode CLEAR() { return getToken(AdvTdlParser.CLEAR, 0); }
		public WhenActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whenAction; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AdvTdlVisitor ) return ((AdvTdlVisitor<? extends T>)visitor).visitWhenAction(this);
			else return null;
		}
	}
